--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 assets/video/PPC[[:space:]]70th[[:space:]]Anniversary.mp4 filter=lfs diff=lfs merge=lfs -text
+assets/video/70PPC_FINAL.mp4 filter=lfs diff=lfs merge=lfs -text
