--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 assets/video/PPC[[:space:]]70th[[:space:]]Anniversary.mp4 filter=lfs diff=lfs merge=lfs -text
 assets/video/70PPC_FINAL.mp4 filter=lfs diff=lfs merge=lfs -text
 assets/video/PPC_Worship_1.mp4 filter=lfs diff=lfs merge=lfs -text
+assets/video/PPC_Worship_2.mp4 filter=lfs diff=lfs merge=lfs -text
