--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ assets/video/70PPC_FINAL.mp4 filter=lfs diff=lfs merge=lfs -text
 assets/video/PPC_Worship_1.mp4 filter=lfs diff=lfs merge=lfs -text
 assets/video/PPC_Worship_2.mp4 filter=lfs diff=lfs merge=lfs -text
 assets/video/PPC_Worship_3.mp4 filter=lfs diff=lfs merge=lfs -text
+assets/video/PPC_Worship_4.mp4 filter=lfs diff=lfs merge=lfs -text
